Update notice + confirmation vaccination flow
notice: multifunction api
confirmation: get statistical api